--- a/finances/templates/finances/base.html
+++ b/finances/templates/finances/base.html
@@ -5,6 +5,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="{% static 'finances/js/base.js' %}"></script>
 		<link rel="stylesheet" type="text/css" href="{% static 'finances/css/base.css' %}">
+		<!--<link rel="stylesheet/less" type="text/css" href="{% static 'finances/less/base.less' %}" />
+		<script src="{% static 'finances/js/less.js' %}" type="text/javascript"></script>-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}{% endblock head %}
     <title>{% block title %}Finances{% endblock title%}</title>
@@ -12,22 +14,83 @@
 
 	<body id="body">
 
-		<header>
-			<h1>{% block header %}Finances{% endblock header %}</h1>
-			<div id="dropdown-button" class="dropdown" onclick=dropdown()>&#8285{% if message_notification %}<sup class="notification-sign">&#8226</sup>{% endif %}</div>
-			<nav id="dropdown-menu" class="dd-content" style="display: none">
-				{% block dropdown-menu %}{% endblock dropdown-menu %}
-				{% if request.user.is_superuser %}<a href="{% url 'support:user_overview' %}">Support</a>
-				{% else %}<a href="{% url 'support:inbox' %}">Support {% if message_notification %} <span class="notification-sign">&#8226</span>{% endif %}</a>
-				{% endif %}
-				<a href="{% url 'logout' %}">Logout</a>
-			</nav>
-		</header>
+		<div class='container'>
 
-		<div class="container">
-      {% block content %}
-			{% endblock content %}
-    </div>
+			<div class='right-side-bar'>
+
+				<nav class="main-nav">
+					<h1>{% block header %}Finances{% endblock header %}</h1>
+					<ul>
+						<li>
+							<a href="{% url 'finances:home' %}" class="main-link">
+								<img src="#" />
+								<span class="desktop-only">Dashboard</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'finances:default_year_table' %}" class="main-link">
+								<img src="#" />
+								<span class="desktop-only">Reports</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'finances:default_transactions' %}" class="main-link">
+								<img src="#" />
+								<span class="desktop-only">Transactions</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'finances:categories' %}" class="main-link">
+								<img src="#" />
+								<span class="desktop-only">Categories</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'finances:search_terms' %}" class="main-link">
+								<img src="#" />
+								<span class="desktop-only">Other</span>
+							</a>
+						</li>
+					</ul>
+				</nav>
+
+				<nav class="bottom-nav">
+					<ul>
+						<li>
+							{% if request.user.is_superuser %}
+							<a href="{% url 'support:user_overview' %}">
+							{% else %}
+							<a href="{% url 'support:inbox' %}">
+							{% endif %}
+								<img src="#" />
+								<span class="desktop-only">Support</span>
+								{% if message_notification %}
+								<span class="notification-sign">&#8226</span>
+								{% endif %}
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="#" />
+								<span class="desktop-only">Bob</span>
+							</a>
+						<li>
+							<a href="{% url 'logout' %}">
+								<img src="#" />
+								<span class="desktop-only">Logout</span>
+							</a>
+						</li>
+					</ul>
+				</nav>
+
+			</div>
+
+			<div class="main">
+	    	{% block content %}
+				{% endblock content %}
+			</div>
+
+		</div>
 
   </body>
 </html>
