--- a/finances/static/finances/css/base.css
+++ b/finances/static/finances/css/base.css
@@ -1,63 +1,383 @@
+/* Setup CSS */
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 body {
   margin: 0;
   font-family: sans-serif;
 }
-
 .hidden {
   display: none;
 }
-
-.container {
-  margin: 10px;
+/* main grid layout */
+.right-side-bar {
+  height: 100vh;
+  position: fixed;
+  background-color: #222;
+  color: #bbb;
+  width: 11em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
-header {
-  background-color: blue;
+@media only screen and (max-width: 1000px) {
+  .right-side-bar {
+    width: 3em;
+  }
 }
-
-header > h1 {
-  color: white;
-  padding: 15px;
-  display: inline-block;
+.right-side-bar .main-nav h1,
+.right-side-bar .bottom-nav h1 {
+  font-size: 1.7em;
+  padding: 0.5em;
   margin: 0;
-}
-
-header a {
-  text-decoration: none;
-  color: white;
-}
-
-.dropdown {
-  color: white;
-  display: inline-block;
-  margin: 0;
-  font-size: 2em;
-  float: right;
-  padding: 15px;
-  font-weight: 600;
-  width: 30px;
   text-align: center;
-  user-select: none;
-  cursor: default;
 }
-
+@media only screen and (max-width: 1000px) {
+  .right-side-bar .main-nav h1,
+  .right-side-bar .bottom-nav h1 {
+    display: none;
+  }
+}
+.right-side-bar .main-nav ul,
+.right-side-bar .bottom-nav ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+.right-side-bar .main-nav a,
+.right-side-bar .bottom-nav a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: #bbb;
+  padding: 0.5em;
+  transition: background-color 0.5s;
+}
+.right-side-bar .main-nav a:hover,
+.right-side-bar .bottom-nav a:hover {
+  background-color: #444;
+}
+.right-side-bar .main-nav img,
+.right-side-bar .bottom-nav img {
+  height: 1.4em;
+  width: 1.4em;
+}
+.right-side-bar .main-nav span,
+.right-side-bar .bottom-nav span {
+  margin-left: 0.5em;
+}
+.right-side-bar .main-nav li:first-child {
+  border-top: 2px solid #191919;
+}
+.right-side-bar .main-nav li {
+  border-bottom: 2px solid #191919;
+}
+.right-side-bar .bottom-nav {
+  margin-bottom: 1em;
+}
+.main {
+  margin-left: 11em;
+}
+@media only screen and (max-width: 1000px) {
+  .main {
+    margin-left: 3em;
+  }
+}
 .notification-sign {
   color: darkred;
 }
-
-.dd-content {
-  background-color: white;
-  display: inline-block;
-  position: absolute;
-  right: 15px;
-  top: 40px;
-  box-shadow: 0 5px 25px 0 black;
-  z-index: 1;
+@media only screen and (max-width: 1000px) {
+  .desktop-only {
+    display: none;
+  }
 }
-
-.dd-content > a {
-  text-decoration: none;
+@media only screen and (max-width: 767px) {
+  .tablet-up {
+    display: none;
+  }
+}
+/* standard thingies */
+.basic-form table {
+  padding: 1em;
+  background-color: white;
+}
+.basic-form table th {
+  text-align: left;
+}
+.basic-form table h1 {
+  margin: 0;
+  vertical-align: middle;
+}
+@media only screen and (max-width: 500px) {
+  .basic-form table h1 {
+    font-size: 1.4em;
+  }
+}
+.basic-form #form-close {
+  cursor: pointer;
+  vertical-align: middle;
+  text-align: right;
+  padding-right: 1em;
+}
+.basic-form table td:nth-child(1) {
+  text-align: right;
+}
+.basic-form table label {
+  padding: 10px 5px;
+  font-size: 1.2em;
+}
+@media only screen and (max-width: 500px) {
+  .basic-form table label {
+    font-size: 0.9em;
+  }
+}
+.basic-form table td:nth-child(2) > * {
+  width: 150px;
+  font-size: 1em;
+  padding: 10px;
+}
+@media only screen and (max-width: 500px) {
+  .basic-form table td:nth-child(2) > * {
+    width: 120px;
+    font-size: 0.7em;
+  }
+}
+.basic-form .save-button {
+  padding: 10px;
+  background-color: blue;
+  color: white;
+  font-size: 1em;
+  letter-spacing: 1px;
+  border: none;
+  cursor: pointer;
+}
+.basic-form .delete-button {
+  background-color: white;
+  border: none;
+  color: red;
+  font-size: 1em;
+  cursor: pointer;
+}
+.basic-form .errorlist {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.basic-form .errorlist li {
+  color: red;
+  padding: 10px 5px;
+}
+.basic-table {
+  margin: 20px 20px;
+  border-collapse: collapse;
+}
+.basic-table thead > tr {
+  background-color: blue;
+  color: white;
+}
+.basic-table th {
+  text-align: left;
+  padding: 8px 12px;
+}
+.basic-table td {
+  padding: 5px 12px;
+  text-align: right;
+}
+.basic-table td:first-child {
+  background-color: lightblue;
+  text-align: left;
+}
+.basic-table tbody > tr:nth-child(even) {
+  background: #f2f2f2;
+}
+.basic-table tbody > tr:nth-child(odd) {
+  background: #ffffff;
+}
+.basic-table a {
   color: black;
+}
+.page-header {
+  margin: 0;
+  padding-top: 0.6em;
+  padding-left: 1em;
+}
+hr {
+  width: 95%;
+  margin: auto;
+}
+/* specific thingies */
+.empty-form {
+  display: none;
+}
+.transaction-tabs {
+  display: flex;
+  flex-direction: column;
+}
+.transaction-tabs .tabs {
+  display: flex;
+  list-style-type: none;
+  margin: 1em 1em;
+  display: inline-block;
+  padding: 0;
+}
+.transaction-tabs .tabs li {
+  display: inline-block;
+  margin-right: 0.4em;
+  margin-bottom: 0.4em;
+}
+.transaction-tabs .tabs a {
+  border: 4px solid blue;
+  border-radius: 10px 10px 0 0;
+  padding: 10px;
   display: block;
+  background-color: white;
+  transition: background-color 0.5s;
+  text-decoration: none;
+  color: blue;
+  font-weight: bold;
+}
+.transaction-tabs .tabs .active {
+  background-color: lightblue;
+}
+.transaction-tabs .tabs a:hover {
+  background-color: lightblue;
+}
+.one-em-margin {
+  padding: 1em;
+}
+.transaction-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.transaction-table th {
+  color: white;
+  background-color: blue;
+  padding: 1em 0.5em;
+  text-align: left;
+}
+.transaction-table td {
+  padding: 0.2em 0.5em;
+  transition: background-color 0.5s;
+}
+.transaction-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.transaction-table td:nth-child(2) {
+  text-align: right;
+  padding-right: 1em;
+}
+#popup-form {
+  right: 0;
+  left: 0;
+  margin: auto;
+  position: fixed;
+  top: 10%;
+  text-align: center;
+}
+#popup-form form {
+  display: inline-block;
+  box-shadow: 0 0 0 100vw rgba(0, 0, 0, 0.8);
+}
+.category-table {
+  margin: 1em;
+  border-collapse: collapse;
+  display: inline-block;
+  vertical-align: top;
+}
+.category-table thead th {
+  text-align: left;
+  color: white;
+  background-color: blue;
+  padding: 1em 1em;
+}
+.category-table > tbody > tr > td:nth-child(1) {
+  width: 100px;
+  vertical-align: top;
+  padding: 1em 1em;
+  background-color: lightblue;
+}
+.category-table tbody > tr > td a {
+  color: black;
+  text-decoration: none;
+}
+.category-table tbody > tr > td:nth-child(2) {
+  width: 150px;
+}
+.category-table tr:last-child > td {
+  text-align: right;
+}
+.specification-table,
+.specification-table > tbody,
+.specification-table tr {
+  display: block;
+}
+.specification-table td {
+  padding: 0.5em 1em;
+}
+.specification-table tr:last-child td {
+  display: block;
+  text-align: right;
+}
+.to_process {
   margin: 15px;
+  border-collapse: collapse;
+}
+.to_process th {
+  color: white;
+  background-color: blue;
+  padding: 15px 10px;
+  text-align: left;
+}
+.to_process td {
+  padding: 5px 10px;
+}
+.to_process tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.special_add_transaction {
+  background: white;
+  padding: 0 25px 25px 25px;
+  position: fixed;
+  top: 50px;
+  left: 25%;
+  border: 3px solid black;
+  width: 380px;
+}
+.special_add_transaction span {
+  float: right;
+  padding: 5px;
+  margin-top: 30px;
+}
+.special_transaction-form {
+  display: inline-block;
+}
+.special_transaction-form th {
+  text-align: left;
+}
+.special_transaction-form td:nth-child(1) {
+  text-align: right;
+}
+.special_transaction-form label {
+  padding: 10px 5px;
+  font-size: 1.2em;
+}
+.special_transaction-form td:nth-child(2) > * {
+  width: 150px;
+  font-size: 1em;
+  padding: 10px;
+}
+.special_transaction-form .save-button {
+  padding: 10px;
+  background-color: blue;
+  color: white;
+  font-size: 1em;
+  letter-spacing: 1px;
+  border: none;
+  cursor: pointer;
 }
