--- a/finances/templates/finances/dataset.html
+++ b/finances/templates/finances/dataset.html
@@ -3,17 +3,12 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'finances/css/basic-form.css' %}">
-{% endblock %}
-
-{% block header %}
-<a class="prev" href="{% url 'finances:datasets' %}">&#10094;</a> {{ block.super }}
 {% endblock %}
 
 {% block content %}
 
 {{ form.non_field_errors }}
-<form method='post'>{% csrf_token %}
+<form class='basic-form' method='post'>{% csrf_token %}
   <table>
     <thead>
       <tr>
@@ -48,6 +43,7 @@
         {% if add == False %}
         <td><a class='delete-button' href="{% url 'finances:delete_dataset' form.instance.id %}">Delete dataset</a></td>
         {% endif %}
+      </tr>
     </tbody>
   </table>
 </form>
