--- a/finances/templates/finances/transaction.html
+++ b/finances/templates/finances/transaction.html
@@ -1,31 +1,19 @@
-{% extends "finances/base.html" %}
-
-{% load static %}
-
-{% block header %}
-<a class="prev" href="{% url 'finances:default_transactions' %}">&#10094;</a> {{ block.super }}
-{% endblock %}
-
-{% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'finances/css/basic-form.css' %}">
-<script src="{% static 'finances/js/transaction.js' %}"></script>
-<script>var category_data = JSON.parse('{{ category_data | escapejs }}');</script>
-{% endblock %}
-
-{% block content %}
-
-{{ form.non_field_errors }}
-<form class='transaction-form' id="transaction-form" method="POST">{% csrf_token %}
+<form class='basic-form' id="transaction-form" method="POST"
+data-add="{{ add }}"
+{% if add == False %}data-instance-id="{{ form.instance.id }}"{% endif %}
+>{% csrf_token %}
+  {{ form.non_field_errors }}
   <table>
     <thead>
       <tr>
-        <th colspan=3>
+        <th colspan=2>
           {% if add %}
           <h1>Add new transaction</h1>
           {% else %}
           <h1>Edit transaction</h1>
           {% endif %}
         </th>
+        <th id="form-close">[x]</th>
       </tr>
     </thead>
     <tbody>
@@ -51,13 +39,11 @@
       </tr>
       <tr>
         <td></td>
-        <td><input class='save-button' type="submit" name="save" value="Save transaction"></td>
+        <td><input id='save-button' class='save-button' type="submit" name="save" value="Save transaction"></td>
         {% if add == False %}
-        <td><a class='delete-button' href="{% url 'finances:delete_transaction' form.instance.id %}">Delete transaction</a></td>
+        <td><a  id='delete-button' class='delete-button' href="{% url 'finances:delete_transaction' form.instance.id %}">Delete transaction</a></td>
         {% endif %}
       </tr>
     </tbody>
   </table>
 </form>
-
-{% endblock content %}
