--- a/finances/static/finances/css/balance.css
+++ b/finances/static/finances/css/balance.css
@@ -1,45 +1,46 @@
-table {
+
+.balance-table {
 	margin: 30px;
 	border-collapse: collapse;
 }
-tr:nth-child(1) > th {
+.balance-table tr:nth-child(1) > th {
 	background-color: blue;
 	color: white;
 	padding: 10px;
 	text-align: left;
 }
-tr:nth-child(2) > th {
+.balance-table tr:nth-child(2) > th {
 	background-color: lightblue;
 	padding: 10px;
 }
-th.spec {
+.balance-table th.spec {
 	font-weight: normal;
 	padding: 5px;
 	font-size:0.8em;
 }
-td > a {
+.balance-table td > a {
 	color: black;
 	text-decoration: none;
 }
-td:first-child {
+.balance-table td:first-child {
 	background-color: lightblue;
 }
-td.spec {
+.balance-table td.spec {
 	padding: 5px;
 	font-size: 0.8em;
 }
-tbody > tr {
+.balance-table tbody > tr {
 	transition: background-color 0.5s;
 }
-tbody > tr:hover {
+.balance-table tbody > tr:hover {
 	background-color: lightblue !important;
 }
-tbody > tr:nth-child(even) {
+.balance-table tbody > tr:nth-child(even) {
 	background-color: #f2f2f2;
 }
-tbody td {
+.balance-table tbody td {
 	padding: 10px;
 }
-td:not(:first-child) {
+.balance-table td:not(:first-child) {
 	text-align: right;
 }
