--- a/finances/templates/finances/base.html
+++ b/finances/templates/finances/base.html
@@ -3,10 +3,10 @@
 <html>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="{% static 'finances/js/base.js' %}"></script>
+    <!--<script src="{% static 'finances/js/base.js' %}"></script>-->
 		<link rel="stylesheet" type="text/css" href="{% static 'finances/css/base.css' %}">
-		<!--<link rel="stylesheet/less" type="text/css" href="{% static 'finances/less/base.less' %}" />
-		<script src="{% static 'finances/js/less.js' %}" type="text/javascript"></script>-->
+		<link rel="stylesheet/less" type="text/css" href="{% static 'finances/less/base.less' %}" />
+		<script src="{% static 'finances/js/less.js' %}" type="text/javascript"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block head %}{% endblock head %}
     <title>{% block title %}Finances{% endblock title%}</title>
@@ -31,6 +31,12 @@
 							<a href="{% url 'finances:default_year_table' %}" class="main-link">
 								<img src="#" />
 								<span class="desktop-only">Reports</span>
+							</a>
+						</li>
+						<li>
+							<a href="{% url 'finances:default_balance' %}" class="main-link">
+								<img src="#" />
+								<span class="desktop-only">Balance</span>
 							</a>
 						</li>
 						<li>
